# network_c_http

./: .gitignore  CMakeLists.txt  Makefile  notes.md  readme.md  smpl.json  something.todo
apple_tests/: CMakeLists.txt
apple_tests/test_buffers/: CMakeLists.txt  test_buffer_main.c
apps/: CMakeLists.txt  client.py
apps/async_msg_stream/: msg_reader.c  msg_stream.c  msg_stream.h  msg_writer.c
apps/client/: demo_make_request_response.c  demo_make_request_response.h  verify_client_thread_function.c  verify_getopt.c  verify_main.c  verify_thread_context.h
apps/client_process/: CMakeLists.txt  verify_app.c  verify_client_thread_function.c  verify_main.c  verify_thread_context.c  verify_thread_context.h
apps/client_verify_apps/: verify_app.c
apps/http_common/: http_make_request_response.c  http_make_request_response.h
apps/msg/: demo_msg.c  demo_msg.h  demo_msg_parser.c  msg_generic.c  msg_generic.h  msg_select.h  msg_selection_header.h  newline_msg.c  newline_msg.h  newline_msg_parser.c
apps/mstream/: mstream.c  mstream.h
apps/server/: async_main.c  async_process_main.h  main.c  server_ctx.c  server_ctx.h
apps/server_apps/: CMakeLists.txt  echo_app.c  echo_app.h  server_app_selection_header.h
apps/server_process/: CMakeLists.txt  async_main.c  async_process_main.c  async_process_main.h  main.c  server_ctx.c  server_ctx.h
apps/servers/: CMakeLists.txt  async_main.c  async_process_main.c  generic_app.h
apps/simple_request_response_app/: simple_app.c  simple_app.h
apps/sync_msg_stream/: sync_msg_stream.c  sync_msg_stream.h
apps/tcp/: CMakeLists.txt  tcp_listener.c  tcp_reader.c  tcp_stream.c  tcp_stream.h  tcp_stream_internal.h  tcp_writer.c
apps/tcp_msg_stream/: CMakeLists.txt  msg_reader.c  msg_stream.h
apps_demo/async/: CMakeLists.txt  demo_async_main.c  demo_async_process_main.c
apps_demo/sync/: CMakeLists.txt  demo_sync_main.c  demo_sync_process_main.c
apps_http/sync/: CMakeLists.txt  http_sync_main.c  http_sync_process_main.c  http_sync_server_process.c
apps_http/verify/: CMakeLists.txt  http_verify_main.c  http_verify_thread_context.h
async-server-app/: CMakeLists.txt  async-server-main.c  client.py
c_eg/: CMakeLists.txt  __list_template.c  __list_template.h  alloc.c  alloc.h  client.c  client.h  constants.h  datasource.c  datasource.h  handler.h  handler_example.c  handler_example.h  hdrlist.c  hdrlist.h  header_line.c  header_line.h  headerline_list.c  headerline_list.h  kvpair.c  kvpair.h  list.c  list.h  logger.c  logger.h  message.c  message.h  message_reader.c  message_reader.h  message_writer.c  message_writer.h  mytype.c  mytype.h  mytype_list.c  mytype_list.h  mytype_list_in.h  mytype_list_inc.h  parser.c  parser.h  parser_test.c  (+24 more)
c_eg/buffer/: buffer.hpp  buffer_allocator.hpp  buffer_chain.c  buffer_chain.h  buffer_for_tests.hpp  cbuffer.c  cbuffer.h  contig_buffer.c  contig_buffer.h  contig_buffer_factory.hpp  iobuffer.c  iobuffer.h
c_eg/headerline/: generated.c  generated.h  hand_coded.c  hand_coded.h  headerline_list.c  headerline_list.h
c_eg/list/: template.c  template.h
c_eg/mytype/: generated.c  generated.h  hand_coded.c  hand_coded.h  mytype_list.c  mytype_list.h
c_http/: CMakeLists.txt  alloc.c  alloc.h  check_tag.h  client.c  client.h  constants.h  datasource.c  docs_modules.h  handler.h  handler_example.c  handler_example.h  hdrlist.c  hdrlist.h  kvpair.c  kvpair.h  list.c  list.h  list_template.c  ll_parser.c  ll_parser.h  ll_parser_types.c  ll_parser_types.h  ll_reader.c  ll_reader.h  logger.c  logger.h  macros.h  message.c  message.h  mytype.c  mytype.h  mytype_list.c  mytype_list.h  operation.h  oprlist.c  oprlist.h  parser_old.c  parser_old.h  parser_test.c  (+22 more)
c_http/aio_api/: conn.c  conn.h  conn_read.c  conn_read_msg.c  conn_write.c  handler.c  handler.h  handler_echo.c  handler_function.c  handler_simple.c  types.h  xr_server.c  xr_server.h
c_http/api/: buffer_chain.c  buffer_chain.h  cbuffer.c  cbuffer.h  client.c  client.h  handler.h  handler_example.c  handler_example.h  iobuffer.c  iobuffer.h  message.c  message.h  reader.c  reader.h  server.c  server.h  url.c  url.h  url_parser.c  url_parser.h  writer.c  writer.h
c_http/async/: async_server.c  async_server.h  check_tag.h  conn.c  conn.h  conn_read.c  conn_read_msg.c  conn_write.c  handler.c  handler.h  handler_echo.c  handler_function.c  handler_simple.c  tcp_conn.c  tcp_conn.h  tcp_conn_list.c  tcp_conn_read.c  tcp_conn_read_msg.c  tcp_conn_write.c  types.h  xr_server.c  xr_server.h
c_http/buffer/: buffer_chain.c  buffer_chain.h  cbuffer.c  cbuffer.h  iobuffer.c  iobuffer.h
c_http/common/: alloc.c  alloc.h  buffer_chain.c  buffer_chain.h  cbuffer.c  cbuffer.h  hdrlist.c  hdrlist.h  iobuffer.c  iobuffer.h  kvpair.c  kvpair.h  list.c  list.h  message.c  message.h  queue.c  url.c  url.h  url_parser.c  utils.c  utils.h
c_http/demo_protocol/: demo_client.c  demo_client.h  demo_connection.c  demo_connection.h  demo_handler.c  demo_handler.h  demo_message.c  demo_message.h  demo_parser.c  demo_parser.h  demo_parser_test.c  demo_parser_test.h  demo_process_request.c  demo_process_request.h  demo_server.c  demo_server.h  demo_sync_reader.c  demo_sync_reader.h  demo_sync_reader_private.h  demo_sync_writer.c  demo_sync_writer.h
c_http/details/: datasource.c  datasource.h  hdrlist.c  hdrlist.h  ll_parser.c  ll_parser.h  ll_parser_types.c  ll_parser_types.h  parser_test.c  parser_test.h  rdsocket.c  rdsocket.h  worker.c  worker.h
c_http/dsl/: alloc.c  buffer.hpp  buffer_chain.c  buffer_chain.h  cbuffer.c  cbuffer.h  iobuffer.c  iobuffer.h  kvpair.c  kvpair.h  list.c  list.h  list_template.c  list_template.h  queue.c  queue.h  utils.c  utils.h
demo_app/: CMakeLists.txt  client.py  demo_main.c  demo_process_main.c  demo_verify.c  valgrind.sh  verify_getopt.c  verify_getopt.h  verify_statistics.c  verify_statistics.h  verify_thread_context.c  verify_thread_context.h
http_apps/: CMakeLists.txt  client.py
http_in_c/: CMakeLists.txt  check_tag.h  constants.h  logger.c  logger.h  macros.h  socket_functions.h  unittest.c
tests/: CMakeLists.txt
(+2170 files in other folders)
